# apiconf

./: .gitignore  LICENSE  README.md
Auto Run Docs/Initiation/: Phase-01-Rust-CLI-Foundation.md  Phase-02-App-Profile-Commands.md  Phase-03-Environment-Export.md  Phase-04-Python-Library.md  Phase-05-TypeScript-Library.md
cli/: Cargo.toml
cli/src/: config.rs  error.rs  lib.rs  main.rs  providers.rs
cli/src/commands/: apps.rs  env.rs  keys.rs  mod.rs
python/: README.md  pyproject.toml
python/src/apiconf/: __init__.py  exceptions.py  loader.py  providers.py
python/tests/: test_smoke.py
typescript/: README.md  package-lock.json  package.json  tsconfig.json
typescript/src/: errors.ts  index.ts  loader.ts  providers.ts  types.ts
typescript/tests/: smoke.test.ts
